--- a/build.gradle
+++ b/build.gradle
@@ -38,11 +38,16 @@ dependencies {
     implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.3'
     implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.23.0'
     implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.3'
-//    compileOnly group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '6.0.0'
     providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
 
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.15.2'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.1'
+
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.27'
+    implementation group: 'org.springframework', name: 'spring-core', version: '5.3.27'
+    implementation group: 'org.springframework', name: 'spring-context', version: '5.3.27'
+    implementation group: 'org.springframework', name: 'spring-web', version: '5.3.27'
+
 }
 
 
